# macadmin-toolkit

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .shellcheckrc  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/skills/check-docs/: SKILL.md
.claude/skills/deep-research/: SKILL.md
.cursor/rules/: docs-reference.mdc  jamf-api-best-practices.mdc  python-general-best-practices.mdc  technical-writing.mdc
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: test.yml
components/configs/claudecode/: CLAUDE.md
components/scripts/python/: claude_code_guidelines.py.tftpl  clear_downloads.py  default_dock.py  default_dock_docklib.py  jamf_log_uploader.py
components/vendor-provided/: Installomator.sh  swiftDialog-notification-template.sh
components/xattrs/: claude_code_guidelines.py.tftpl  claude_code_model.py  falcon_agent_id.py  falcon_sensor_status.py  managed-python-present.sh  uptime.py  zoom_camera_allowed.py
terraform/: .terraform.lock.hcl  buildings.tf  categories.tf  departments.tf  main.tf  policies.tf  scripts.tf  variables.tf  xattrs.tf
tests/: _helpers.py  conftest.py
tests/unit/: test_claude_code_guidelines_deploy.py  test_claude_code_guidelines_ea.py  test_clear_downloads.py  test_default_dock.py  test_default_dock_docklib.py  test_jamf_log_uploader.py
